--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "@types/papaparse": "^5.5.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.0",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
